# quepasa

./: Cargo.toml  menu.sh
src/: main.rs
