[package]
name = "quepasa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keepass = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
rpassword = "5.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.4"
hyperlocal = "0.8"
serde = { version = "1.0", features = ["derive"] }
xdg = "2.4"
libc = "0.2"
